Increase line height to prevent touch target overlap

--- a/app/page.module.scss
+++ b/app/page.module.scss
@@ -7,6 +7,7 @@
 
   h1, p {
     font-weight: 400;
+    line-height: 1.3;
 
     font-size: 1.6rem;
 
